--- a/index.html
+++ b/index.html
@@ -204,25 +204,6 @@ z-index:1
   }  
   
   a.two {
-color:#000000;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
-}
-
-/* mouse over link */
-a.two:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-/* for contact */
-a.six {
 color:#00FF00;
 text-decoration:none;
 font-family: 'Courier New',Arial;
@@ -231,7 +212,7 @@ font-weight: lighter;
 }
 
 /* mouse over link */
-a.six:hover {
+a.two:hover {
   color: #d8ffd8;
   text-decoration:none;
   font-family: 'Courier New',Arial;
@@ -254,6 +235,9 @@ margin-top:19em;
 margin-top:25em;
 }
 
+.preangel {
+margin-top:30em;
+}
 
 .angel {
    overflow: hidden;
@@ -286,22 +270,12 @@ box-shadow: 0em 0em 0.5em 0.001em #7b0f1d;
 .ghibli img{
 border: 0.01em solid #00c5ab;
 box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
-}
+}b71c1c
 
-
-
-.parallax {
-  background-image: url('blue.jpg');
-margin-top:16em;
-  height: 300%; 
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 </style>
 </head>
 <body>
+
 <div class="hero-image">
 
  <div class="top-right"><a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
@@ -351,31 +325,22 @@ margin-top:16em;
 <center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&musicTerritory=DE&marketplaceId=A1PA6795UKMFR9"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
 </div>
 
-<div class="parallax">
-<br>
 
 <div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#000000; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#000000; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></span></p></div>
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></span></p></div>
 
 
-<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#000000; font-family:'Courier New',Arial; font-weight: lighter">We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</span></p> 
-<p align="right"><span style="font-size:12px; color:#000000; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</span></p> 
+<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</span></p> 
+<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</span></p> 
 </div>
 
-
-
-</div>
-
-
-
-
-
-
+<div class="preangel">
+<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
 
 <div class="angel"><a name="no_dickpics_please_thanks"><img src="angel.jpg" width="100%"></a></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
-<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
 _ | _<br>
@@ -399,6 +364,5 @@ _ | _<br>
 
 
 <body bgcolor="#000000">
-
 </body>
 </html>
