--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@media only screen and (min-width: 768px){
 .parallax {
   background-image: url('blue.jpg');
 margin-top:16em;
@@ -303,11 +304,9 @@ margin-top:16em;
   background-repeat: no-repeat;
   background-size: cover;
 }
+}
 
-@media only screen and (max-width: 768px){
- .parallax {
-}
-}
+
 </style>
 </head>
 <body>
