--- a/index.html
+++ b/index.html
@@ -306,7 +306,11 @@ margin-top:16em;
 }
 }
 
-
+@media only screen and (max-width: 768px){
+parallax {
+background-color: white;
+}
+}
 </style>
 </head>
 <body>
