--- a/index.html
+++ b/index.html
@@ -2,280 +2,17 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" media="all" href="mobil.css" />
+<link rel="stylesheet" type="text/css" media="(min-width: 672px)" href="desktop.css" />
 <style>
 body, html {
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("profil.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 90%;
-  left: 0%;
-  right: 0%;
-}
-
-a.four {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 14px;
-font-weight: lighter;
-}
-/* mouse over link */
-a.four:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 14px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-a.one {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 16px;
-font-weight: lighter;
-}
-/* mouse over link */
-a.one:hover {
-  color: #8e9cff;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 16px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px red;
-}
-
-a.five {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
-}
-/* mouse over link */
-a.five:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-   text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-.centered {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.top-right {
-  position: absolute;
-  top: 6%;
-  right: 1.25%;
-  }
-  
-    img.youtube {
-  top: 17px;
-  right: 15px;
-position: absolute;
-z-index: 2;
-  }
-   
-  img.youtube:hover{
-   opacity: 0;   
-}
-      
- img.youtube2 {
-  top: 17px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.soundcloud {
-  top: 47px;
-  right: 15px;
-  opacity: 1;
-position: absolute; 
-z-index: 2;
-  }
-  
-  img.soundcloud:hover{
-   opacity: 0;   
-}
-
- img.soundcloud2 {
-  top: 47px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.instagram {
-  top: 87px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-  z-index: 2;
-  }
-  
-  img.instagram:hover{
-   opacity: 0;   
-}
-
- img.instagram2 {
-  top: 87px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }
-  
-  img.facebook {
-  top: 127px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-   z-index: 2;
-  }
-  
-  img.facebook:hover{
-   opacity: 0;   
-}
-
- img.facebook2 {
-  top: 127px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
-  img.twitter {
-  top: 167px;
-  right: 15px;
-  opacity: 1;
-position:   absolute; 
-z-index: 2;
-  }
-  
-  img.twitter:hover{
-   opacity: 0;   
-}
-
- img.twitter2 {
-  top: 167px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
-  img.twitch {
-  top: 207px;
-  right: 15px;
-  opacity: 1;
-position:  absolute; 
-  z-index: 2;
-  }
-  
-  img.twitch:hover{
-   opacity: 0;   
-}
-
- img.twitch2 {
-  top: 207px;
-  right: 15px;
-position: absolute;
-z-index:1
-  }  
-  
-  a.two {
-color:#00FF00;
-text-decoration:none;
-font-family: 'Courier New',Arial;
-font-size: 12px;
-font-weight: lighter;
-}
-
-/* mouse over link */
-a.two:hover {
-  color: #d8ffd8;
-  text-decoration:none;
-  font-family: 'Courier New',Arial;
-  font-size: 12px;
-  font-weight: lighter;
-  text-shadow: 2px 2px 5px #ec2ec4;
-}
-
-
-.about {
-margin-top:19em;
-}
-
-
-.sweetdemon {
-margin-top:19em;
-}
-
-.ghibli {
-margin-top:25em;
-}
-
-.preangel {
-margin-top:30em;
-}
-
-.angel {
-   overflow: hidden;
-   padding: 0px;
-   width: 100%;
-   margin-top:0em;
-}
-
-.contact {
-margin-top: 1em;
-}
-
-.centered3 {
-margin-top:8em;
-}
-
-div.music {
-margin-top:16em;
-}
-
-.thanksyou {
-margin-top:10em;
-}
-
-.sweetdemon img{
-border: 0.01em solid #3e0bb4;
-box-shadow: 0em 0em 0.5em 0.001em #7b0f1d;
-}
-
-.ghibli img{
-border: 0.01em solid #00c5ab;
-box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
-}b71c1c
-
 </style>
 </head>
 <body>
-
 <div class="hero-image">
 
  <div class="top-right"><a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
@@ -325,22 +62,31 @@ box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
 <center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&musicTerritory=DE&marketplaceId=A1PA6795UKMFR9"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
 </div>
 
+<div class="parallax">
+<br>
 
 <div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></span></p></div>
+<h5>Sweet_Demon</h5><p><br><h6>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></h6></p></div>
 
 
-<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</span></p> 
-<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</span></p> 
+<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3></p> 
+<p align="right"><br><h4>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</h4></p> 
 </div>
 
-<div class="preangel">
-<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
+
+
+</div>
+
+
+
+
+
+
 
 <div class="angel"><a name="no_dickpics_please_thanks"><img src="angel.jpg" width="100%"></a></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
-<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
 _ | _<br>
@@ -364,5 +110,6 @@ _ | _<br>
 
 
 <body bgcolor="#000000">
+
 </body>
 </html>
