--- a/experimentieren.html
+++ b/experimentieren.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="all" href="mobil.css" />
-<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="desktop.css" />
+<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="experiment desktop.css" />
 <style>
 body, html {
   height: 100%;
@@ -80,7 +80,7 @@ body, html {
 
 
 
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <div class="angel"><a name="no_dickpics_please_thanks"><img src="angel.jpg" width="100%"></a></div>
 
@@ -106,7 +106,79 @@ _ | _<br>
 <center><p class="music"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
 <div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div>
 
+<div class= "lyrics"><marquee height="100%" direction="down"> <span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">
+<div style="text-indent:10px;">h1.verse1{</div>
+cut;<br>
+your throat by my tongue;<br>
+you got sober lungs;<br>
+and i make you feel;<br>
 
+<div style="text-indent:10px;">the highs and then the palest lows;</div>
+i lift you up; i punch you down;<br>
+baby;<br>
+}<br>
+<div style="text-indent:10px;">h1.bridge1{</div>
+tender boy, make me feel you leave;<br> 
+i cry two oceans, you traverse them for me;<br>
+and when you just swim fast enough;<br>
+my holy hand will rise;<br>
+}<br>
+<div style="text-indent:10px;">h1.chorus{</div>          
+when i take your mind;<br>
+and i make it mine;<br>
+
+<div style="text-indent:10px;">cause I heard what you said;</div>
+to the girl that you met;<br>
+
+<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
+boy boy;<br>
+
+<div style="text-indent:10px;">then I come around;</div> 
+at your mama’s house;<br>
+on your safest ground;<br>
+
+<div style="text-indent:10px;">and I will defend;</div>
+
+<div style="text-indent:10px;">back up!;</div>
+} <br>
+<div style="text-indent:10px;">h1.verse2{</div>
+my hands;<br>
+to forget everything;<br>
+they just toughed heaven;<br> 
+and they toughed your skin;<br>
+
+<div style="text-indent:10px;">deepthroat your feelings in a fight;</div>
+save ‘em in mind for better times;<br>
+i bought you flowers;<br>
+
+<div style="text-indent:10px;">what if we both just have like a chill night … together … watching them die?;</div>
+wouldn’t that be romantic?;<br>
+} <br>
+<div style="text-indent:10px;">h1.bridge2{</div>
+tender boy, make me feel you leave; <br>
+i burn the ground and you get burned by me;<br>
+and on a good day, if i feel like it;<br>
+my holy hand will rise;<br>
+} <br>
+<div style="text-indent:10px;">h1.chorus{</div>
+when i take your mind;<br> 
+and i make it mine;<br>
+
+<div style="text-indent:10px;">cause I heard what you said;</div>
+to the girl that you met;<br> 
+
+<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
+boy boy;<br>
+
+<div style="text-indent:10px;">then I come around;</div> 
+at your mama’s house;<br>
+on your safest ground;<br>
+
+<div style="text-indent:10px;">and i will defend;</div>
+
+<div style="text-indent:10px;">back up!;</div>
+}<br>
+</marquee></div>
 
 <body bgcolor="#000000">
 
