--- a/experimentieren.html
+++ b/experimentieren.html
@@ -62,6 +62,9 @@ body, html {
 <center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&musicTerritory=DE&marketplaceId=A1PA6795UKMFR9"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
 </div>
 
+
+<img class="releases" src="releases.jpg" width="100%"> 
+
 <div class="parallax">
 <br>
 
@@ -82,7 +85,7 @@ body, html {
 
 <iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<div class="angel"><a name="no_dickpics_please_thanks"><img src="angel.jpg" width="100%"></a></div>
+<div class="angel"><a name="no_dickpics_please_thanks"><img src="angels.jpg" width="100%"></a></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
@@ -106,79 +109,7 @@ _ | _<br>
 <center><p class="music"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
 <div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div>
 
-<div class= "lyrics"><marquee height="100%" direction="down"> <span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">
-<div style="text-indent:10px;">h1.verse1{</div>
-cut;<br>
-your throat by my tongue;<br>
-you got sober lungs;<br>
-and i make you feel;<br>
 
-<div style="text-indent:10px;">the highs and then the palest lows;</div>
-i lift you up; i punch you down;<br>
-baby;<br>
-}<br>
-<div style="text-indent:10px;">h1.bridge1{</div>
-tender boy, make me feel you leave;<br> 
-i cry two oceans, you traverse them for me;<br>
-and when you just swim fast enough;<br>
-my holy hand will rise;<br>
-}<br>
-<div style="text-indent:10px;">h1.chorus{</div>          
-when i take your mind;<br>
-and i make it mine;<br>
-
-<div style="text-indent:10px;">cause I heard what you said;</div>
-to the girl that you met;<br>
-
-<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
-boy boy;<br>
-
-<div style="text-indent:10px;">then I come around;</div> 
-at your mama’s house;<br>
-on your safest ground;<br>
-
-<div style="text-indent:10px;">and I will defend;</div>
-
-<div style="text-indent:10px;">back up!;</div>
-} <br>
-<div style="text-indent:10px;">h1.verse2{</div>
-my hands;<br>
-to forget everything;<br>
-they just toughed heaven;<br> 
-and they toughed your skin;<br>
-
-<div style="text-indent:10px;">deepthroat your feelings in a fight;</div>
-save ‘em in mind for better times;<br>
-i bought you flowers;<br>
-
-<div style="text-indent:10px;">what if we both just have like a chill night … together … watching them die?;</div>
-wouldn’t that be romantic?;<br>
-} <br>
-<div style="text-indent:10px;">h1.bridge2{</div>
-tender boy, make me feel you leave; <br>
-i burn the ground and you get burned by me;<br>
-and on a good day, if i feel like it;<br>
-my holy hand will rise;<br>
-} <br>
-<div style="text-indent:10px;">h1.chorus{</div>
-when i take your mind;<br> 
-and i make it mine;<br>
-
-<div style="text-indent:10px;">cause I heard what you said;</div>
-to the girl that you met;<br> 
-
-<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
-boy boy;<br>
-
-<div style="text-indent:10px;">then I come around;</div> 
-at your mama’s house;<br>
-on your safest ground;<br>
-
-<div style="text-indent:10px;">and i will defend;</div>
-
-<div style="text-indent:10px;">back up!;</div>
-}<br>
-</marquee></div>
 
 <body bgcolor="#000000">
 
