--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ body, html {
 <center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"target="_blank">  {apple music}  </a><a class="five" href="https://music.amazon.de/artists/B0894X7ZCR?ref=dm_sh_6b85-438d-dmcp-dbc2-df972&musicTerritory=DE&marketplaceId=A1PA6795UKMFR9"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
 </div>
 
+
+<img class="releases" src="releases.jpg" width="100%"> 
+
 <div class="parallax">
 <br>
 
@@ -73,16 +76,12 @@ body, html {
 <p align="right"><br><h4>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</h4></p> 
 </div>
 
-
-
 </div>
-
-
 
 
 <iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<div class="angel"><a name="no_dickpics_please_thanks"><img src="angel.jpg" width="100%"></a></div>
+<div class="logo"><a name="no_dickpics_please_thanks"><img src="logo.jpg" width="100%"></a></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
