--- a/experimentieren.html
+++ b/experimentieren.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="all" href="mobil.css" />
-<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="experiment desktop.css" />
+<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="desktop.css" />
 <style>
 body, html {
   height: 100%;
@@ -76,16 +76,12 @@ body, html {
 <p align="right"><br><h4>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</h4></p> 
 </div>
 
-
-
 </div>
-
-
 
 
 <iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<div class="angel"><a name="no_dickpics_please_thanks"><img src="angels.jpg" width="100%"></a></div>
+<div class="logo"><a name="no_dickpics_please_thanks"><img src="logo.jpg" width="100%"></a></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
