--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" media="all" href="mobil.css" />
-<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="desktop.css" />
+<link rel="stylesheet" type="text/css" media="(max-width: 799px)" href="experiment mobil.css"/>
+<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="experiment desktop.css"/>
 <style>
 body, html {
   height: 100%;
@@ -48,10 +48,9 @@ body, html {
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
-<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="about_dat_gurl">.about amygdala_amara {</a></span></p> 
-<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.
-</span></p> 
-<p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">}</span></p> 
+<div class="about"><img class="about" src="lila.png" width="290px" height="292px" ><p class="about1"><a name="about_dat_gurl">.about amygdala_amara {</a></p> 
+<p class="about2">amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p> 
+<p class="about1">}</p> 
 </div>
 
 
@@ -68,13 +67,12 @@ body, html {
 <div class="parallax">
 <br>
 
-<div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:30px;">
+<div class="sweetdemon"><img class="sweetdemon" src="sweetdemon.png" width="300px" height="300px">
 <h5>Sweet_Demon</h5><p><br><h6>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></h6></p></div>
 
 
-<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3></p> 
-<p align="right"><br><h4>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</h4></p> 
-</div>
+<div class="ghibli"><img class="ghibli" src="ghibli.png" width="300px" height="300px"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3> 
+<br><h4>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</h4></div>
 
 </div>
 
