--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" media="(max-width: 799px)" href="experiment mobil.css"/>
-<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="experiment desktop.css"/>
+<link rel="stylesheet" type="text/css" media="(max-width: 799px)" href="mobil.css"/>
+<link rel="stylesheet" type="text/css" media="(min-width: 800px)" href="desktop.css"/>
 <style>
 body, html {
   height: 100%;
@@ -48,7 +48,7 @@ body, html {
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
-<div class="about"><img class="about" src="lila.png" width="290px" height="292px" ><p class="about1"><a name="about_dat_gurl">.about amygdala_amara {</a></p> 
+<div class="about"><a name="about_dat_gurl"><img class="about" src="lila.png" width="290px" height="292px" ></a><p class="about1">.about amygdala_amara {</p> 
 <p class="about2">amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p> 
 <p class="about1">}</p> 
 </div>
@@ -79,9 +79,9 @@ body, html {
 
 <iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<div class="logo"><a name="no_dickpics_please_thanks"><img src="logo.jpg" width="100%"></a></div>
+<div class="logo"><img src="logo.jpg" width="100%"></div>
 
-<center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
+<center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
