--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body, html {
 
 <div class="iframe-container"><iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
-<div class="logo"><img src="logo.jpg" width="100%"></div>
+<div class="angel"><img src="angel.jpg" width="100%"></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
