--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body, html {
 </div>
 
 
-<img class="releases" src="releases.jpg" width="100%"> 
+<img class="releases" src="releases.png" width="100%"> 
 
 <div class="parallax">
 <br>
