--- a/experimentieren.html
+++ b/experimentieren.html
@@ -13,6 +13,16 @@ body, html {
 </style>
 </head>
 <body>
+
+<div class="loader">
+<img src="loader.gif"></div>
+
+<script type="text/javascript">
+window.addEventListener("load", function () {
+const loader = document.querySelector(".loader");
+loader.className += " hidden"; // class "loader hidden"
+});</script>
+
 <div class="hero-image">
 
  <div class="top-right"><a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
@@ -48,7 +58,7 @@ body, html {
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
-<div class="about"><img class="about" src="lila.png" width="290px" height="292px" ><p class="about1"><a name="about_dat_gurl">.about amygdala_amara {</a></p> 
+<div class="about"><a name="about_dat_gurl"><img class="about" src="lila.png" width="290px" height="292px" ></a><p class="about1">.about amygdala_amara {</p> 
 <p class="about2">amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p> 
 <p class="about1">}</p> 
 </div>
@@ -62,7 +72,7 @@ body, html {
 </div>
 
 
-<img class="releases" src="releases.jpg" width="100%"> 
+<img class="releases" src="releases.png" width="100%"> 
 
 <div class="parallax">
 <br>
@@ -79,9 +89,9 @@ body, html {
 
 <div class="iframe-container"><iframe width="100%"  src="https://www.youtube.com/embed/SxNuDlTxCuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
-<div class="logo"><a name="no_dickpics_please_thanks"><img src="logo.jpg" width="100%"></a></div>
+<div class="angel"><img src="angel.jpg" width="100%"></div>
 
-<center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
+<center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
