--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ loader.className += " hidden"; // class "loader hidden"
 <div class="angel"><img src="angel.jpg" width="100%"></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="no_dickpics_please_thanks">contact</a></span>
-<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="six" href= "mailto:contact@amygdala-amara.com">contact@amygdala-amara.com</a><br>
 _ _ _ _ _ _ _ _ _ _<br>
 _ _ | _ _<br>
 _ | _<br>
