--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ loader.className += " hidden"; // class "loader hidden"
   
 </div>
 
-<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="super_hot_news_like_BURNING">|</a><br>|<br>|<br>|<br>NEWS<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26<br> 
---><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
+<div class="centered3"><center><h2><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="super_hot_news_like_BURNING">|</a><br>|<br>|<br>|<br>NEWS<br>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out now!<br> 
+--><a class="four" href="https://ffm.to/amygdala_amara"> listen to it! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
 <div class="about"><a name="about_dat_gurl"><img class="about" src="lila.png" width="290px" height="292px" ></a><p class="about1">.about amygdala_amara {</p> 
@@ -83,7 +83,7 @@ loader.className += " hidden"; // class "loader hidden"
 
 
 <div class="ghibli"><img class="ghibli" src="ghibli.png" width="300px" height="300px"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3> 
-<br><h4>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</h4></div>
+<br><h4>is out you can<br><a class="two" href="https://ffm.to/amygdala_amara"target="_blank">//listen to it//</a> now!</h4></div>
 
 </div>
 
