--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ loader.className += " hidden"; // class "loader hidden"
 <br>
 
 <div class="sweetdemon"><img class="sweetdemon" src="sweetdemon.png" width="300px" height="300px">
-<h5>Sweet_Demon</h5><p><br><h6>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></h6></p></div>
+<h5>Sweet_Demon</h5><p><br><h6>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a><br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-sweet-demon-lyrics"target="_blank">//here//</a></h6></p></div>
 
 
 <div class="ghibli"><img class="ghibli" src="ghibli.png" width="300px" height="300px"><h3>We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</h3> 
-<br><h4>is out you can<br><a class="two" href="https://ffm.to/amygdala_amara"target="_blank">//listen to it//</a> now!</h4></div>
+<br><h4>my new song is out! <br>you can <a class="two" href="https://ffm.to/amygdala_amara"target="_blank">//listen to it//</a> now!<br><br>check out the lyrics <a class="two" href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics"target="_blank">//here//</a></h4></div>
 
 </div>
 
